# piscraper

./: .gitignore  README.md  db_utils.py  migrate_existing_jsons.py  pyproject.toml  query_silver_layer.py  requirements.txt  run_dashboard.py  run_scrapers.py  scraper_coolcharm.ipynb  scraper_coolcharm.py  scraper_koepel.py  scraper_rite.ipynb  scraper_rite.py  scraper_rowreformer.py  silver_aggregation.py
.github/: scraping_schedule.yml
.github/workflows/: scrape.yml  scraping_schedule.yml
config/: requirements.txt
data/: README.md
docs/: README_DASHBOARD.md  README_DATABASE.md  README_SILVER_LAYER.md
notebooks/: analyze_results.ipynb  connect_to_db.ipynb  scraper_coolcharm.ipynb  scraper_koepel.ipynb  scraper_rowreformer.ipynb
scraped_data/: coolcharm_schedule_20250509_182420.json  coolcharm_schedule_20250510_143203.json  coolcharm_schedule_20250510_180237.json  coolcharm_schedule_20250511_040611.json  coolcharm_schedule_20250516_081432.json  coolcharm_schedule_20250516_160336.json  coolcharm_schedule_20250517_100905.json  coolcharm_schedule_20250517_160455.json  coolcharm_schedule_20250520_141715.json  coolcharm_schedule_20250520_160452.json  coolcharm_schedule_20250521_040719.json  coolcharm_schedule_20250521_100920.json  coolcharm_schedule_20250521_160402.json  coolcharm_schedule_20250522_040705.json  coolcharm_schedule_20250522_100929.json  coolcharm_schedule_20250522_160404.json  coolcharm_schedule_20250523_040651.json  coolcharm_schedule_20250523_100933.json  coolcharm_schedule_20250523_160334.json  coolcharm_schedule_20250524_040617.json  coolcharm_schedule_20250524_100902.json  coolcharm_schedule_20250525_040853.json  coolcharm_schedule_20250525_100857.json  coolcharm_schedule_20250525_160434.json  coolcharm_schedule_20250526_040845.json  coolcharm_schedule_20250526_101302.json  coolcharm_schedule_20250526_160346.json  coolcharm_schedule_20250527_040837.json  coolcharm_schedule_20250527_100913.json  coolcharm_schedule_20250527_160501.json  coolcharm_schedule_20250528_040657.json  coolcharm_schedule_20250528_100935.json  coolcharm_schedule_20250528_160354.json  coolcharm_schedule_20250529_040738.json  coolcharm_schedule_20250529_100915.json  coolcharm_schedule_20250529_160347.json  coolcharm_schedule_20250530_040659.json  coolcharm_schedule_20250530_100855.json  coolcharm_schedule_20250530_160343.json  coolcharm_schedule_20250531_040605.json  (+1155 more)
scripts/: create_demo_data.py  run_dashboard.py  run_initial_silver_migration.py  setup_dashboard.py
src/: __init__.py
src/dashboard/: __init__.py  app.py
src/database/: __init__.py  models.py  schema.sql  utils.py
src/scrapers/: __init__.py  base.py  cli.py  coolcharm.py  koepel.py  rite.py  rowreformer.py
src/silver_layer/: __init__.py  aggregator.py
